# databricks-apps-scheduler

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: job.yml
src/databricks_apps_scheduler/: __init__.py  __main__.py  cli.py
tests/: test_databricks_apps_scheduler.py
